--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "animate.css": "^4.1.1",
     "daisyui": "^2.15.0",
     "firebase": "^9.8.1",
+    "jsonwebtoken": "^8.5.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
